# rudis

./: .gitignore  COMMAND_PLAN.md  Cargo.toml  README-BUILD.md  README-FRAME.md  README-TRANSACTIONS.md  README.md  appendonly.aof  build-release.ps1  dump.rdb  rudis.conf  rudis.properties  test_info.py  test_info_server.py
.cargo/: config.toml
.github/workflows/: build-docker.yml  deploy.yml
.workflow/: pipeline-20250723.yml
config/: rudis.conf
docker/: Dockerfile  README.md
docs/: .gitignore  .npmrc  package.json  pnpm-lock.yaml  tsconfig.json
docs/src/: index.md
examples/: demo.py  rudis_visualizer.py
examples/flagged/: log.csv
release/: rudis-server.properties
release/linux/: rudis-server.properties
release/macOS/: rudis-server  rudis-server.properties
release/rudis-0.1.0-linux-x86_64-musl/: rudis.conf
release/windows/: rudis-server.properties
src/: args.rs  banner.rs  command.rs  command_strategies.rs  command_strategy.rs  commands.rs  config.rs  db.rs  db_manager.rs  frame.rs  handler.rs  lib.rs  main.rs  message.rs  rdb_file.rs  replication.rs  server.rs  server_handler.rs  session.rs  structure.rs
src/aof/: aof.rs  mod.rs
src/cmd/: auth.rs  bgsave.rs  dbsize.rs  del.rs  dump.rs  echo.rs  expire.rs  flushall.rs  flushdb.rs  mod.rs  ping.rs  psync.rs  replconf.rs  save.rs  saverdb.rs  select.rs  ttl.rs  unknown.rs
src/cmds/: mod.rs  unknown.rs
src/command/: mod.rs  (+6 more)
tests/: test_cmd.rs  test_info_command.rs  test_key_cmd.rs  test_move_command.rs  test_performance.rs  test_sticky_commands.rs  test_string_cmd.rs  test_transactions.rs
(+268 files in other folders)
