[package]
name = "rudis-server"
version = "0.0.5"
authors = ["Jmys"]
edition = "2021"

[dependencies]                                 
ahash = "0.8.11"
anyhow = "1.0.59"
bytes = "1.3.0"
clap = { version = "4.5.13", features = ["derive"] }
env_logger = "0.8"
indicatif = "0.15.0"
log = "0.4"
parking_lot = "0.12.3"
redis = "0.21.4"
regex = "1"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"
serde_json = "1.0"
