[package]
name = "rudis-server"
version = "0.0.5"
authors = ["Jmys"]
edition = "2021"

[dependencies]            
anyhow = "1.0.59"
bytes = "1.3.0"
env_logger = "0.8"
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
log = "0.4"
redis = "0.21.4"

