[package]
name = "rudis-server"
version = "0.0.6"
authors = ["就眠儀式"]
edition = "2021"

[dependencies]            
bytes = "1.3.0"
regex = "1.5.4"
anyhow = "1.0.59"
env_logger = "0.8"
bincode = "2.0.0-rc.3"
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
redis = "0.21.4"
tempfile = "3.3.0"
log = "0.4"